{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 49,
  "lineage": "751cf8c1-41e3-dd38-6198-a9d410ed5d7e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0585993104a958d9f",
            "arn": "arn:aws:ec2:us-east-1:084828578003:elastic-ip/eipalloc-0585993104a958d9f",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-00c4f508332f76e71",
            "domain": "vpc",
            "id": "eipalloc-0585993104a958d9f",
            "instance": "i-0e3ac0e1f956d75c4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0db5447fc10f2656a",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-54-147-1-10.compute-1.amazonaws.com",
            "public_ip": "54.147.1.10",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.webserver_nic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-084568db4383264d4",
            "arn": "arn:aws:ec2:us-east-1:084828578003:instance/i-0e3ac0e1f956d75c4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e3ac0e1f956d75c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0db5447fc10f2656a"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0db5447fc10f2656a",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e1f4e54aa8b463e2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0154a686fbfdddb61",
            "tags": {
              "Name": "my-web-server"
            },
            "tags_all": {
              "Name": "my-web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04b365ef2757d896c"
            ]
          },
          "dependencies": [
            "aws_network_interface.webserver_nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet_1",
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084828578003:internet-gateway/igw-0447e89ad5a3d9cda",
            "id": "igw-0447e89ad5a3d9cda",
            "owner_id": "084828578003",
            "tags": {
              "Name": "sample-gateway"
            },
            "tags_all": {
              "Name": "sample-gateway"
            },
            "vpc_id": "vpc-0f16bb9b668a1d675"
          },
          "dependencies": [
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "webserver_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084828578003:network-interface/eni-0db5447fc10f2656a",
            "attachment": [
              {
                "attachment_id": "eni-attach-0391adeebcc0362cb",
                "device_index": 0,
                "instance": "i-0e3ac0e1f956d75c4"
              }
            ],
            "id": "eni-0db5447fc10f2656a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:0a:d2:df:45:e7",
            "owner_id": "084828578003",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04b365ef2757d896c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0154a686fbfdddb61"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet_1",
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084828578003:route-table/rtb-05c6a48c6b4fa0112",
            "id": "rtb-05c6a48c6b4fa0112",
            "owner_id": "084828578003",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0447e89ad5a3d9cda",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sample-route"
            },
            "tags_all": {
              "Name": "sample-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f16bb9b668a1d675"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0744bc2339639fe57",
            "route_table_id": "rtb-05c6a48c6b4fa0112",
            "subnet_id": "subnet-0154a686fbfdddb61"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route_table_1",
            "aws_subnet.subnet_1",
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084828578003:security-group/sg-04b365ef2757d896c",
            "description": "Allow SSH, HTTP, and HTTPS traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b365ef2757d896c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "084828578003",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-web"
            },
            "tags_all": {
              "Name": "allow-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f16bb9b668a1d675"
          },
          "dependencies": [
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084828578003:subnet/subnet-0154a686fbfdddb61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0154a686fbfdddb61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "084828578003",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sample-subnet"
            },
            "tags_all": {
              "Name": "sample-subnet"
            },
            "vpc_id": "vpc-0f16bb9b668a1d675"
          },
          "dependencies": [
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sample_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084828578003:vpc/vpc-0f16bb9b668a1d675",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c87841df008fd611",
            "default_route_table_id": "rtb-0fb2099026a023649",
            "default_security_group_id": "sg-0e47d6c1871caee9d",
            "dhcp_options_id": "dopt-053526816bc9d43d2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f16bb9b668a1d675",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fb2099026a023649",
            "owner_id": "084828578003",
            "tags": {
              "Name": "sample-vpc"
            },
            "tags_all": {
              "Name": "sample-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084828578003:security-group-rule/sgr-0e9a355d6c2eaf175",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e9a355d6c2eaf175",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04b365ef2757d896c",
            "security_group_rule_id": "sgr-0e9a355d6c2eaf175",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084828578003:security-group-rule/sgr-0d2bda3efab56b7aa",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0d2bda3efab56b7aa",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04b365ef2757d896c",
            "security_group_rule_id": "sgr-0d2bda3efab56b7aa",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084828578003:security-group-rule/sgr-0dcd2123b76bba421",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0dcd2123b76bba421",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04b365ef2757d896c",
            "security_group_rule_id": "sgr-0dcd2123b76bba421",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:084828578003:security-group-rule/sgr-0a82567be9897ea7c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0a82567be9897ea7c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04b365ef2757d896c",
            "security_group_rule_id": "sgr-0a82567be9897ea7c",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_vpc.sample_vpc"
          ]
        }
      ]
    }
  ]
}